<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:paddingTop="4dp"
        >
        
        <TextView
            style="@style/CaptionText"
            android:text="@string/about_version" />
        <TextView
            android:id="@+id/version"
            style="@style/BodyText"
            android:text="@string/unknown"/>

        <TextView
            style="@style/CaptionText"
            android:text="@string/about_source" />
        <TextView
            style="@style/BodyText"
            android:text="@string/source_link"
            android:autoLink="web" />

        <TextView
            style="@style/CaptionText"
            android:text="@string/about_license"/>
        <TextView
            android:text="@string/license_gplv3_later"
            style="@style/BodyText" />

    </LinearLayout>
</ScrollView>