<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >
    <item
        android:id="@+id/action_add_host"
        android:title="@string/add_host"
        app:showAsAction="ifRoom|withText"
        android:icon="@drawable/ic_my_add"
        />
    <item android:id="@+id/action_edit_host"
        android:title="@string/edit_host"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_edit_24dp"
        />
    <item android:id="@+id/action_delete_host"
        android:title="@string/delete_host"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_delete_24dp"
        />
    <item
        android:id="@+id/action_network_permission"
        android:title="@string/allow_network"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_about"
        android:title="@string/action_about"
        app:showAsAction="never"
        />
</menu>